fixed footer and paragraph spacing

--- a/style.css
+++ b/style.css
@@ -6,12 +6,15 @@ html {
     display: table; 
     width: 100%;
     margin: auto;
+    text-align: center;
 }
 
 body {
     display: table-cell; 
     text-align: center;
     
+    margin-left: auto;
+    margin-right: auto;
     width: 940px;
     background: url("img/background.png") repeat-x/* no-repeat center center fixed;
     background-size: cover */;
@@ -108,6 +111,10 @@ p {
     text-align: left;
 }
 
+p + p {
+    margin-top: 1em;
+}
+
 a {
     font-weight: bold;
     text-decoration: none;
@@ -138,6 +145,7 @@ a:hover.menuItem {
 } /* unvisited link */
 
 #footer {
+    padding-top: 1.5em;
     text-align: center;
     font-size: 12.5px;
 }
